HxContextMenuGridColumn. Draw invisible header to avoid column' headers shift short time after rendering.

--- a/Havit.Blazor.Components.Web.Bootstrap/wwwroot/defaults.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/wwwroot/defaults.css
@@ -181,3 +181,7 @@ form {
 form > .hx-button {
 	align-self: start;
 }
+
+.hx-grid-context-menu-th {
+	width: 36px;
+}
